--- a/index.html
+++ b/index.html
@@ -5,43 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webstudio</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="top-header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a href="./index.html"><span class="logo">Web</span> Studio</a>
+        <ul class="nav-list">
           <li>
-            <a href="">Studio</a>
+            <a href="" class="link">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a href="./partfolio.html" class="link">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="header-contact">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="button">Order Service</button>
       </section>
-      <section>
+      <section class="advantages">
         <h2>about us</h2>
-        <ul>
+        <ul class="advan-list">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -72,9 +80,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="work">
         <h2>What are we doing</h2>
-        <ul>
+        <ul class="work-list">
           <li>
             <img src="./images/img1.jpg" alt="desctop" width="360" />
           </li>
@@ -86,9 +94,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team">
         <h2>Our Team</h2>
-        <ul>
+        <ul class="team-list">
           <li>
             <img src="./images/img.jpg" alt="team member" width="264" />
             <h3>Mark Guerrero</h3>
@@ -112,9 +120,11 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo-footer">
+        <span class="logo">Web</span> Studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
