update partfolio file

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
       <section class="hero">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+        <button type="button" class="main-button">Order Service</button>
       </section>
       <section class="advantages">
         <h2>about us</h2>
