--- a/partfolio.html
+++ b/partfolio.html
@@ -41,8 +41,8 @@
       </address>
     </header>
     <section class="main-nav">
-      <h1>portfolio</h1>
-      <h2>our work</h2>
+      <h1>Navigation</h1>
+
       <ul class="main-list">
         <li><button type="button" class="button">All</button></li>
         <li><button type="button" class="button">Web Site</button></li>
@@ -52,6 +52,7 @@
       </ul>
     </section>
     <section class="our-work">
+      <h2>our work</h2>
       <ul class="work-list">
         <li>
           <img src="./portfolio-image/img-app.jpg" alt="" />
