--- a/partfolio.html
+++ b/partfolio.html
@@ -17,7 +17,7 @@
         <a href="./index.html"><span class="logo">Web</span> Studio</a>
         <ul class="nav-list">
           <li>
-            <a href="" class="link">Studio</a>
+            <a href="./index.html" class="link">Studio</a>
           </li>
           <li>
             <a href="./partfolio.html" class="link">Portfolio</a>
@@ -55,47 +55,47 @@
       <h2>our work</h2>
       <ul class="work-list">
         <li>
-          <img src="./portfolio-image/img-app.jpg" alt="" />
+          <img src="./partfolio-image/img-app.jpg" alt="" />
           <h3>Banking App Interface Concept</h3>
           <p>App</p>
         </li>
         <li>
-          <img src="./portfolio-image/img-marketing.jpg" alt="" />
+          <img src="./partfolio-image/img-marketing.jpg" alt="" />
           <h3>Cashless Payment</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./portfolio-image/img-meditation.jpg" alt="" />
+          <img src="./partfolio-image/img-meditation.jpg" alt="" />
           <h3>Meditation App</h3>
           <p>App</p>
         </li>
         <li>
-          <img src="./portfolio-image/img-taxi.jpg" alt="" />
+          <img src="./partfolio-image/img-taxi.jpg" alt="" />
           <h3>Taxi Service</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./portfolio-image/img-screen.jpg" alt="" />
+          <img src="./partfolio-image/img-screen.jpg" alt="" />
           <h3>Screen Illustrations</h3>
           <p>Design</p>
         </li>
         <li>
-          <img src="./portfolio-image/img6.jpg" alt="" />
+          <img src="./partfolio-image/img6.jpg" alt="" />
           <h3>Online Courses</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./portfolio-image/img7.jpg" alt="" />
+          <img src="./partfolio-image/img7.jpg" alt="" />
           <h3>Instagram Stories Concept</h3>
           <p>Design</p>
         </li>
         <li>
-          <img src="./portfolio-image/img-web.jpg" alt="" />
+          <img src="./partfolio-image/img-web.jpg" alt="" />
           <h3>Organic Food</h3>
           <p>Web Site</p>
         </li>
         <li>
-          <img src="./portfolio-image/img-coffee.jpg" alt="" />
+          <img src="./partfolio-image/img-coffee.jpg" alt="" />
           <h3>Fresh Coffee</h3>
           <p>Web Site</p>
         </li>
