--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="" class="link">Studio</a>
           </li>
           <li>
-            <a href="./partfolio.html" class="link">Portfolio</a>
+            <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
           <li>
             <a href="" class="link">Contacts</a>
