--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <header class="top-header">
       <nav>
         <a href="./index.html"><span class="logo">Web</span> Studio</a>
-        <ul class="nav-list">
+        <ul class="list"">
           <li>
             <a href="./index.html" class="link">Studio</a>
           </li>
@@ -28,7 +28,7 @@
         </ul>
       </nav>
       <address>
-        <ul class="header-contact">
+        <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
@@ -43,7 +43,7 @@
     <section class="main-nav">
       <h1>Navigation</h1>
 
-      <ul class="main-list">
+      <ul class="list">
         <li><button type="button" class="button">All</button></li>
         <li><button type="button" class="button">Web Site</button></li>
         <li><button type="button" class="button">App</button></li>
@@ -53,7 +53,7 @@
     </section>
     <section class="our-work">
       <h2>our work</h2>
-      <ul class="work-list">
+      <ul class="list">
         <li>
           <img src="./partfolio-image/img-app.jpg" alt="" />
           <h3>Banking App Interface Concept</h3>
