--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="top-header">
       <nav>
         <a href="./index.html"><span class="logo">Web</span> Studio</a>
-        <ul class="nav-list">
+        <ul class="list">
           <li>
             <a href="" class="link">Studio</a>
           </li>
@@ -30,7 +30,7 @@
         </ul>
       </nav>
       <address>
-        <ul class="header-contact">
+        <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
@@ -49,7 +49,7 @@
       </section>
       <section class="advantages">
         <h2>about us</h2>
-        <ul class="advan-list">
+        <ul class="list">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -82,7 +82,7 @@
       </section>
       <section class="work">
         <h2>What are we doing</h2>
-        <ul class="work-list">
+        <ul class="list">
           <li>
             <img src="./images/img1.jpg" alt="desctop" width="360" />
           </li>
@@ -96,7 +96,7 @@
       </section>
       <section class="team">
         <h2>Our Team</h2>
-        <ul class="team-list">
+        <ul class="list">
           <li>
             <img src="./images/img.jpg" alt="team member" width="264" />
             <h3>Mark Guerrero</h3>
