--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
   <body>
     <header class="top-header">
       <nav>
-        <a href="./index.html"><span class="logo">Web</span> Studio</a>
         <ul class="list">
+          <li>
+            <a href="./index.html" class="main-logo link"
+              ><span class="logo">Web</span> Studio</a
+            >
+          </li>
           <li>
             <a href="" class="link">Studio</a>
           </li>
@@ -29,7 +33,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" class="link"
@@ -48,32 +52,32 @@
         <button type="button" class="main-button">Order Service</button>
       </section>
       <section class="advantages">
-        <h2>about us</h2>
+        <h2 class="advantages-title" hidden>about us</h2>
         <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="list-title">Strategy</h3>
+            <p class="list-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="list-title">Punctuality</h3>
+            <p class="list-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="list-title">Diligence</h3>
+            <p class="list-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="list-title">Technologies</h3>
+            <p class="list-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -81,7 +85,7 @@
         </ul>
       </section>
       <section class="work">
-        <h2>What are we doing</h2>
+        <h2 class="work-title">What are we doing</h2>
         <ul class="list">
           <li>
             <img src="./images/img1.jpg" alt="desctop" width="360" />
@@ -95,35 +99,35 @@
         </ul>
       </section>
       <section class="team">
-        <h2>Our Team</h2>
+        <h2 class="team-title">Our Team</h2>
         <ul class="list">
           <li>
             <img src="./images/img.jpg" alt="team member" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="list-title">Mark Guerrero</h3>
+            <p class="list-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/img(1).jpg" alt="team member" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="list-title">Tom Ford</h3>
+            <p class="list-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img(2).jpg" alt="team member" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="list-title">Camila Garcia</h3>
+            <p class="list-text">Marketing</p>
           </li>
           <li>
             <img src="./images/img(3).jpg" alt="team member" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="list-title">Daniel Wilson</h3>
+            <p class="list-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo-footer">
-        <span class="logo">Web</span> Studio</a
-      >
+      <a href="./index.html" class="logo-footer link">
+        Web <span class="logo">Studio</span>
+      </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
