--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -14,13 +16,15 @@
   <body>
     <header class="top-header">
       <nav>
-        <a href="./index.html"><span class="logo">Web</span> Studio</a>
-        <ul class="list"">
+        <a href="./index.html" class="main-logo link"
+          >Web <span class="logo">Studio</span></a
+        >
+        <ul class="list">
           <li>
             <a href="./index.html" class="link">Studio</a>
           </li>
           <li>
-            <a href="./partfolio.html" class="link">Portfolio</a>
+            <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
           <li>
             <a href="" class="link">Contacts</a>
@@ -40,70 +44,74 @@
         </ul>
       </address>
     </header>
-    <section class="main-nav">
-      <h1>Navigation</h1>
+    <main>
+      <section class="main-nav">
+        <h1>Navigation</h1>
 
-      <ul class="list">
-        <li><button type="button" class="button">All</button></li>
-        <li><button type="button" class="button">Web Site</button></li>
-        <li><button type="button" class="button">App</button></li>
-        <li><button type="button" class="button">Design</button></li>
-        <li><button type="button" class="button">Marketing</button></li>
-      </ul>
-    </section>
-    <section class="our-work">
-      <h2>our work</h2>
-      <ul class="list">
-        <li>
-          <img src="./partfolio-image/img-app.jpg" alt="" />
-          <h3>Banking App Interface Concept</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img src="./partfolio-image/img-marketing.jpg" alt="" />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./partfolio-image/img-meditation.jpg" alt="" />
-          <h3>Meditation App</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img src="./partfolio-image/img-taxi.jpg" alt="" />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./partfolio-image/img-screen.jpg" alt="" />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img src="./partfolio-image/img6.jpg" alt="" />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="./partfolio-image/img7.jpg" alt="" />
-          <h3>Instagram Stories Concept</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img src="./partfolio-image/img-web.jpg" alt="" />
-          <h3>Organic Food</h3>
-          <p>Web Site</p>
-        </li>
-        <li>
-          <img src="./partfolio-image/img-coffee.jpg" alt="" />
-          <h3>Fresh Coffee</h3>
-          <p>Web Site</p>
-        </li>
-      </ul>
-    </section>
+        <ul class="list">
+          <li><button type="button" class="button">All</button></li>
+          <li><button type="button" class="button">Web Site</button></li>
+          <li><button type="button" class="button">App</button></li>
+          <li><button type="button" class="button">Design</button></li>
+          <li><button type="button" class="button">Marketing</button></li>
+        </ul>
+
+        <h2>our work</h2>
+        <ul class="list">
+          <li>
+            <img src="./partfolio-image/img-app.jpg" alt="" />
+            <h3>Banking App Interface Concept</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./partfolio-image/img-marketing.jpg" alt="" />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./partfolio-image/img-meditation.jpg" alt="" />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./partfolio-image/img-taxi.jpg" alt="" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./partfolio-image/img-screen.jpg" alt="" />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./partfolio-image/img6.jpg" alt="" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./partfolio-image/img7.jpg" alt="" />
+            <h3>Instagram Stories Concept</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./partfolio-image/img-web.jpg" alt="" />
+            <h3>Organic Food</h3>
+            <p>Web Site</p>
+          </li>
+          <li>
+            <img src="./partfolio-image/img-coffee.jpg" alt="" />
+            <h3>Fresh Coffee</h3>
+            <p>Web Site</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
     <footer class="footer">
-      <a href="./index.html" class="logo-footer">WebStudio</a>
-      <p>
+      <a href="./index.html" class="logo-footer link">
+        Web <span class="logo">Studio</span>
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
