--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <body>
     <header class="top-header">
       <nav>
-        <ul class="list">
+        <ul class="list list-nav">
           <li>
-            <a href="./index.html" class="main-logo link"
-              ><span class="logo">Web</span> Studio</a
+            <a href="./index.html" class="logo link"
+              >Web <span class="logo-style">Studio</span></a
             >
           </li>
           <li>
@@ -34,7 +34,7 @@
         </ul>
       </nav>
       <address class="address">
-        <ul class="list">
+        <ul class="list list-address">
           <li>
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
@@ -49,7 +49,7 @@
     <main>
       <section class="hero">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="main-button">Order Service</button>
+        <button type="button" class="main-button button">Order Service</button>
       </section>
       <section class="advantages">
         <h2 class="advantages-title" hidden>about us</h2>
@@ -99,7 +99,7 @@
         </ul>
       </section>
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
+        <h2 class="our-team">Our Team</h2>
         <ul class="list">
           <li>
             <img src="./images/img.jpg" alt="team member" width="264" />
@@ -125,9 +125,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo-footer link">
-        Web <span class="logo">Studio</span>
-      </a>
+      <a href="./index.html" class="logo link"
+        >Web <span class="logo-styles">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
