--- a/portfolio.html
+++ b/portfolio.html
@@ -16,12 +16,14 @@
   <body>
     <header class="top-header">
       <nav>
-        <a href="./index.html" class="main-logo link"
-          >Web <span class="logo">Studio</span></a
-        >
-        <ul class="list">
+        <ul class="list list-nav">
           <li>
-            <a href="./index.html" class="link">Studio</a>
+            <a href="./index.html" class="logo link"
+              >Web <span class="logo-style">Studio</span></a
+            >
+          </li>
+          <li>
+            <a href="" class="link">Studio</a>
           </li>
           <li>
             <a href="./portfolio.html" class="link">Portfolio</a>
@@ -31,8 +33,8 @@
           </li>
         </ul>
       </nav>
-      <address>
-        <ul class="list">
+      <address class="address">
+        <ul class="list list-address">
           <li>
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
@@ -46,7 +48,7 @@
     </header>
     <main>
       <section class="main-nav">
-        <h1>Navigation</h1>
+        <h1 hidden>Navigation</h1>
 
         <ul class="list">
           <li><button type="button" class="button">All</button></li>
@@ -56,52 +58,52 @@
           <li><button type="button" class="button">Marketing</button></li>
         </ul>
 
-        <h2>our work</h2>
+        <h2 hidden>our work</h2>
         <ul class="list">
           <li>
             <img src="./partfolio-image/img-app.jpg" alt="" />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <h3 class="list-title">Banking App Interface Concept</h3>
+            <p class="list-text">App</p>
           </li>
           <li>
             <img src="./partfolio-image/img-marketing.jpg" alt="" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="list-title">Cashless Payment</h3>
+            <p class="list-text">Marketing</p>
           </li>
           <li>
             <img src="./partfolio-image/img-meditation.jpg" alt="" />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="list-title">Meditation App</h3>
+            <p class="list-text">App</p>
           </li>
           <li>
             <img src="./partfolio-image/img-taxi.jpg" alt="" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="list-title">Taxi Service</h3>
+            <p class="list-text">Marketing</p>
           </li>
           <li>
             <img src="./partfolio-image/img-screen.jpg" alt="" />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="list-title">Screen Illustrations</h3>
+            <p class="list-text">Design</p>
           </li>
           <li>
             <img src="./partfolio-image/img6.jpg" alt="" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="list-title">Online Courses</h3>
+            <p class="list-text">Marketing</p>
           </li>
           <li>
             <img src="./partfolio-image/img7.jpg" alt="" />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+            <h3 class="list-title">Instagram Stories Concept</h3>
+            <p class="list-text">Design</p>
           </li>
           <li>
             <img src="./partfolio-image/img-web.jpg" alt="" />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+            <h3 class="list-title">Organic Food</h3>
+            <p class="list-text">Web Site</p>
           </li>
           <li>
             <img src="./partfolio-image/img-coffee.jpg" alt="" />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+            <h3 class="list-title">Fresh Coffee</h3>
+            <p class="list-text">Web Site</p>
           </li>
         </ul>
       </section>
