--- a/portfolio.html
+++ b/portfolio.html
@@ -108,9 +108,9 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo-footer link">
-        Web <span class="logo">Studio</span>
-      </a>
+      <a href="./index.html" class="logo link"
+        >Web <span class="logo-styles">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
