--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         >
         <ul class="list list-nav">
           <li>
-            <a href="" class="link">Studio</a>
+            <a href="./index.html" class="link">Studio</a>
           </li>
           <li>
             <a href="./portfolio.html" class="link">Portfolio</a>
@@ -98,7 +98,7 @@
       </section>
       <section class="team">
         <h2 class="our-team">Our Team</h2>
-        <ul class="list">
+        <ul class="list list-team">
           <li>
             <img src="./images/img.jpg" alt="team member" width="264" />
             <h3 class="list-title">Mark Guerrero</h3>
