--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
         >
         <ul class="list list-nav">
           <li>
-            <a href="" class="link">Studio</a>
+            <a href="./index.html" class="link">Studio</a>
           </li>
           <li>
             <a href="./portfolio.html" class="link">Portfolio</a>
@@ -56,8 +56,10 @@
           <li><button type="button" class="button">Marketing</button></li>
         </ul>
 
-        <h2 hidden>our work</h2>
         <ul class="list">
+          <li>
+            <h2 hidden>our work</h2>
+          </li>
           <li>
             <img src="./partfolio-image/img-app.jpg" alt="" />
             <h3 class="list-title">Banking App Interface Concept</h3>
