--- a/portfolio.html
+++ b/portfolio.html
@@ -57,53 +57,72 @@
         </ul>
 
         <ul class="list">
-          <li>
-            <h2 hidden>our work</h2>
+          <li class="link">
+            <a href=""
+              ><img src="./partfolio-image/img-app.jpg" alt="app" />
+              <h2 class="list-title">Banking App Intrface Concept</h2>
+              <p class="list-text">App</p>
+            </a>
           </li>
-          <li>
-            <img src="./partfolio-image/img-app.jpg" alt="" />
-            <h3 class="list-title">Banking App Interface Concept</h3>
-            <p class="list-text">App</p>
+          <li class="link">
+            <a href="">
+              <img src="./partfolio-image/img-marketing.jpg" alt="markrting" />
+              <h2 class="list-title">Cashless Paymen</h2>
+              <p class="list-text">Marketing</p>
+            </a>
           </li>
-          <li>
-            <img src="./partfolio-image/img-marketing.jpg" alt="" />
-            <h3 class="list-title">Cashless Payment</h3>
-            <p class="list-text">Marketing</p>
+          <li class="link">
+            <a href="">
+              <img
+                src="./partfolio-image/img-meditation.jpg"
+                alt="meditation"
+              />
+              <h2 class="list-title">Meditation App</h2>
+              <p class="list-text">App</p>
+            </a>
           </li>
-          <li>
-            <img src="./partfolio-image/img-meditation.jpg" alt="" />
-            <h3 class="list-title">Meditation App</h3>
-            <p class="list-text">App</p>
+          <li class="link">
+            <a href="">
+              <img src="./partfolio-image/img-taxi.jpg" alt="taxi" />
+              <h2 class="list-title">Taxi Service</h2>
+              <p class="list-text">Marketing</p>
+            </a>
           </li>
-          <li>
-            <img src="./partfolio-image/img-taxi.jpg" alt="" />
-            <h3 class="list-title">Taxi Service</h3>
-            <p class="list-text">Marketing</p>
+          <li class="link">
+            <a href="">
+              <img src="./partfolio-image/img-screen.jpg" alt="screen" />
+              <h2 class="list-title">Screen Illustraions</h2>
+              <p class="list-text">Design</p>
+            </a>
           </li>
-          <li>
-            <img src="./partfolio-image/img-screen.jpg" alt="" />
-            <h3 class="list-title">Screen Illustrations</h3>
-            <p class="list-text">Design</p>
+          <li class="link">
+            <a href="">
+              <img src="./partfolio-image/img6.jpg" alt="courses" />
+              <h2 class="list-title">Online Courses</h2>
+              <p class="list-text">Marketing</p>
+            </a>
           </li>
-          <li>
-            <img src="./partfolio-image/img6.jpg" alt="" />
-            <h3 class="list-title">Online Courses</h3>
-            <p class="list-text">Marketing</p>
+          <li class="link">
+            <a href="">
+              <img src="./partfolio-image/img7.jpg" alt="stories" />
+              <h2 class="list-title">Instagram Storis Concept</h2>
+              <p class="list-text">Design</p>
+            </a>
           </li>
-          <li>
-            <img src="./partfolio-image/img7.jpg" alt="" />
-            <h3 class="list-title">Instagram Stories Concept</h3>
-            <p class="list-text">Design</p>
+          <li class="link">
+            <a href="">
+              <img src="./partfolio-image/img-web.jpg" alt="food" />
+              <h2 class="list-title">Organic Food</h2>
+              <p class="list-text">Web Site</p>
+            </a>
           </li>
-          <li>
-            <img src="./partfolio-image/img-web.jpg" alt="" />
-            <h3 class="list-title">Organic Food</h3>
-            <p class="list-text">Web Site</p>
-          </li>
-          <li>
-            <img src="./partfolio-image/img-coffee.jpg" alt="" />
-            <h3 class="list-title">Fresh Coffee</h3>
-            <p class="list-text">Web Site</p>
+          <li class="link">
+            <a href="">
+              <img src="./partfolio-image/img-coffee.jpg" alt=" coffee" />
+
+              <h2 class="list-title">Fresh Coffee</h2>
+              <p class="list-text">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
