--- a/portfolio.html
+++ b/portfolio.html
@@ -58,23 +58,26 @@
 
         <ul class="list">
           <li class="link">
-            <a href=""
-              ><img src="./partfolio-image/img-app.jpg" alt="app" />
-              <h2 class="list-title">Banking App Intrface Concept</h2>
+            <a href="" class="link"
+              ><img src="./images/partfolio-image/img-app.jpg" alt="app" />
+              <h2 class="list-title">Banking App Interface Concept</h2>
               <p class="list-text">App</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
-              <img src="./partfolio-image/img-marketing.jpg" alt="markrting" />
-              <h2 class="list-title">Cashless Paymen</h2>
+            <a href="" class="link">
+              <img
+                src="./images/partfolio-image/img-marketing.jpg"
+                alt="markrting"
+              />
+              <h2 class="list-title">Cashless Payment</h2>
               <p class="list-text">Marketing</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a href="" class="link">
               <img
-                src="./partfolio-image/img-meditation.jpg"
+                src="./images/partfolio-image/img-meditation.jpg"
                 alt="meditation"
               />
               <h2 class="list-title">Meditation App</h2>
@@ -82,43 +85,46 @@
             </a>
           </li>
           <li class="link">
-            <a href="">
-              <img src="./partfolio-image/img-taxi.jpg" alt="taxi" />
+            <a href="" class="link">
+              <img src="./images/partfolio-image/img-taxi.jpg" alt="taxi" />
               <h2 class="list-title">Taxi Service</h2>
               <p class="list-text">Marketing</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
-              <img src="./partfolio-image/img-screen.jpg" alt="screen" />
-              <h2 class="list-title">Screen Illustraions</h2>
+            <a href="" class="link">
+              <img src="./images/partfolio-image/img-screen.jpg" alt="screen" />
+              <h2 class="list-title">Screen Illustrations</h2>
               <p class="list-text">Design</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
-              <img src="./partfolio-image/img6.jpg" alt="courses" />
+            <a href="" class="link">
+              <img src="./images/partfolio-image/img6.jpg" alt="courses" />
               <h2 class="list-title">Online Courses</h2>
               <p class="list-text">Marketing</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
-              <img src="./partfolio-image/img7.jpg" alt="stories" />
-              <h2 class="list-title">Instagram Storis Concept</h2>
+            <a href="" class="link">
+              <img src="./images/partfolio-image/img7.jpg" alt="stories" />
+              <h2 class="list-title">Instagram Stories Concept</h2>
               <p class="list-text">Design</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
-              <img src="./partfolio-image/img-web.jpg" alt="food" />
+            <a href="" class="link">
+              <img src="./images/partfolio-image/img-web.jpg" alt="food" />
               <h2 class="list-title">Organic Food</h2>
               <p class="list-text">Web Site</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
-              <img src="./partfolio-image/img-coffee.jpg" alt=" coffee" />
+            <a href="" class="link">
+              <img
+                src="./images/partfolio-image/img-coffee.jpg"
+                alt=" coffee"
+              />
 
               <h2 class="list-title">Fresh Coffee</h2>
               <p class="list-text">Web Site</p>
