--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
       <address class="address">
         <ul class="list list-address">
           <li>
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="link-address link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link-address link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -47,7 +49,7 @@
     <main>
       <section class="hero">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="main-button button">Order Service</button>
+        <button type="button" class="main-button">Order Service</button>
       </section>
       <section class="advantages">
         <h2 class="advantages-title" hidden>about us</h2>
@@ -99,22 +101,22 @@
       <section class="team">
         <h2 class="our-team">Our Team</h2>
         <ul class="list list-team">
-          <li>
+          <li class="team-li">
             <img src="./images/img.jpg" alt="team member" width="264" />
             <h3 class="list-title">Mark Guerrero</h3>
             <p class="list-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-li">
             <img src="./images/img(1).jpg" alt="team member" width="264" />
             <h3 class="list-title">Tom Ford</h3>
             <p class="list-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-li">
             <img src="./images/img(2).jpg" alt="team member" width="264" />
             <h3 class="list-title">Camila Garcia</h3>
             <p class="list-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-li">
             <img src="./images/img(3).jpg" alt="team member" width="264" />
             <h3 class="list-title">Daniel Wilson</h3>
             <p class="list-text">UI Designer</p>
@@ -123,7 +125,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo link"
+      <a href="./index.html" class="logo-footer link"
         >Web <span class="logo-styles">Studio</span></a
       >
       <p class="footer-text">
