--- a/portfolio.html
+++ b/portfolio.html
@@ -34,12 +34,14 @@
       <address class="address">
         <ul class="list list-address">
           <li>
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="link link-adr"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link link-adr"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
