--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             >Web <span class="logo-style">Studio</span></a
           >
           <ul class="list list-nav">
-            <li>
+            <li class="list-header">
               <a href="./index.html" class="link">Studio</a>
             </li>
-            <li>
+            <li class="list-header">
               <a href="./portfolio.html" class="link">Portfolio</a>
             </li>
-            <li>
+            <li class="list-header">
               <a href="" class="link">Contacts</a>
             </li>
           </ul>
@@ -66,28 +66,28 @@
         <div class="container">
           <h2 class="advantages-title" hidden>about us</h2>
           <ul class="list list-advantages">
-            <li>
+            <li class="list-menu">
               <h3 class="list-title">Strategy</h3>
               <p class="list-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="list-menu">
               <h3 class="list-title">Punctuality</h3>
               <p class="list-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="list-menu">
               <h3 class="list-title">Diligence</h3>
               <p class="list-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="list-menu">
               <h3 class="list-title">Technologies</h3>
               <p class="list-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -101,13 +101,13 @@
         <div class="container">
           <h2 class="work-title">What are we doing</h2>
           <ul class="list list-work">
-            <li>
+            <li class="work-li">
               <img src="./images/img1.jpg" alt="desctop" width="360" />
             </li>
-            <li>
+            <li class="work-li">
               <img src="./images/img2.jpg" alt="sms" width="360" />
             </li>
-            <li>
+            <li class="work-li">
               <img src="./images/img3.jpg" alt="application" width="360" />
             </li>
           </ul>
