--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
           </ul>
 
           <ul class="list list-partfolio">
-            <li class="link">
+            <li class="link link-partfolio">
               <a href="" class="link"
                 ><img src="./images/partfolio-image/img(4).jpg" alt="app" />
                 <div class="wrapper-link">
