update css index , portfolio file

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
           >
           <ul class="list list-nav">
             <li class="list-header">
-              <a href="./index.html" class="link">Studio</a>
+              <a href="./index.html" class="link link-header">Studio</a>
             </li>
             <li class="list-header">
-              <a href="./portfolio.html" class="link">Portfolio</a>
+              <a href="./portfolio.html" class="link link-header">Portfolio</a>
             </li>
             <li class="list-header">
-              <a href="" class="link">Contacts</a>
+              <a href="" class="link link-header">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -127,21 +127,21 @@
             <li class="team-li">
               <img src="./images/img(1).jpg" alt="team member" width="264" />
 
-              <div class="wrapper-team">
+              <div class="wrapper">
                 <h3 class="list-title">Tom Ford</h3>
                 <p class="list-text">Frontend Developer</p>
               </div>
             </li>
             <li class="team-li">
               <img src="./images/img(2).jpg" alt="team member" width="264" />
-              <div class="wrapper-team">
+              <div class="wrapper">
                 <h3 class="list-title">Camila Garcia</h3>
                 <p class="list-text">Marketing</p>
               </div>
             </li>
             <li class="team-li">
               <img src="./images/img(3).jpg" alt="team member" width="264" />
-              <div class="wrapper-team">
+              <div class="wrapper">
                 <h3 class="list-title">Daniel Wilson</h3>
                 <p class="list-text">UI Designer</p>
               </div>
