--- a/portfolio.html
+++ b/portfolio.html
@@ -65,18 +65,16 @@
               <button type="button" class="button button-list">All</button>
             </li>
             <li>
-              <button type="button " class="button button-list">
-                Web Site
-              </button>
+              <button type="button" class="button button-list">Web Site</button>
             </li>
             <li>
-              <button type="button " class="button button-list">App</button>
+              <button type="button" class="button button-list">App</button>
             </li>
             <li>
-              <button type="button " class="button button-list">Design</button>
+              <button type="button" class="button button-list">Design</button>
             </li>
             <li>
-              <button type="button " class="button button-list">
+              <button type="button" class="button button-list">
                 Marketing
               </button>
             </li>
@@ -92,7 +90,7 @@
                 </div>
               </a>
             </li>
-            <li class="link">
+            <li class="link link-partfolio">
               <a href="" class="link">
                 <img
                   src="./images/partfolio-image/img(5)(1).jpg"
@@ -104,7 +102,7 @@
                 </div>
               </a>
             </li>
-            <li class="link">
+            <li class="link link-partfolio">
               <a href="" class="link">
                 <img
                   src="./images/partfolio-image/img(6)(1).jpg"
@@ -116,7 +114,7 @@
                 </div>
               </a>
             </li>
-            <li class="link">
+            <li class="link link-partfolio">
               <a href="" class="link">
                 <img src="./images/partfolio-image/img(7)(1).jpg" alt="taxi" />
                 <div class="wrapper-link">
@@ -125,7 +123,7 @@
                 </div>
               </a>
             </li>
-            <li class="link">
+            <li class="link link-partfolio">
               <a href="" class="link">
                 <img
                   src="./images/partfolio-image/img(8)(1).jpg"
@@ -137,7 +135,7 @@
                 </div>
               </a>
             </li>
-            <li class="link">
+            <li class="link link-partfolio">
               <a href="" class="link">
                 <img
                   src="./images/partfolio-image/img(9)(1).jpg"
@@ -149,7 +147,7 @@
                 </div>
               </a>
             </li>
-            <li class="link">
+            <li class="link link-partfolio">
               <a href="" class="link">
                 <img
                   src="./images/partfolio-image/img(10)(1).jpg"
@@ -161,7 +159,7 @@
                 </div>
               </a>
             </li>
-            <li class="link">
+            <li class="link link-partfolio">
               <a href="" class="link">
                 <img src="./images/partfolio-image/img(12)(1).jpg" alt="food" />
                 <div class="wrapper-link">
@@ -170,7 +168,7 @@
                 </div>
               </a>
             </li>
-            <li class="link">
+            <li class="link link-partfolio">
               <a href="" class="link">
                 <img
                   src="./images/partfolio-image/img(11)(1).jpg"
